# py-army-days

./: README.md  days.yaml  pyproject.toml
src/army_days/: cli.py  config.py  core.py  models.py
src/army_days/ansi_text/: __init__.py
src/army_days/utils/: __init__.py
src/py_army_days/: output.py
tests/: conftest.py  test_core.py  test_models.py  test_output.py
