[project]
name = "army-days"
version = "0.3.0"
description = "day countdown program (python edition)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7", "pydantic>=2.9.1", "pyyaml>=6.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "ipython>=8.27.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[project.scripts]
army-days = "army_days.cli:main"

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
